--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <a href="http://skillbox.ru/ " target="_blank">
       <img src="img/logo-light.png" alt="" />
     </a>
-    <br />
     <div>
-      <a href="#">Modules </a> <a href="article.html"> Indents </a><br />
+      <a href="#">Modules </a> <a href="article.html"> Indents </a>
     </div>
-
     <div>
       <a href="skillbox.docx" download
         ><img src="img/download.png" alt="" />Скачать программу
