--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
 
   <body>
     <a href="http://skillbox.ru/ " target="_blank">
-      <img src="img/logo-light.png" alt="" />
+      <img src="img/logo-light.png" alt="Логотип СкиллБокс" />
     </a>
     <div>
-      <a href="#">Modules </a> <a href="article.html"> Indents </a>
+      <a href="#">Modules</a> <a href="article.html"> Indents </a>
     </div>
     <div>
-      <a href="skillbox.docx" download
-        ><img src="img/download.png" alt="" />Скачать программу
-      </a>
+      <a href="skillbox.docx" download>Скачать программу</a>
     </div>
   </body>
 </html>
