--- a/article.html
+++ b/article.html
@@ -73,7 +73,7 @@
       </p>
 
       <figure>
-        <img src="img/1.jpg" alt="" />
+        <img src="img/1.jpg" alt="Пример отступов" />
         <figcaption>
           На скриншоте видно, как правильно задавать отступы, — только справа и
           снизу (показано оранжевым)
@@ -84,7 +84,7 @@
         <b>(margin-top и margin-left)</b> заменяются на аналогичные внутренние
         отступы <b>(padding)</b> у родителя элементов.
       </p>
-      <img src="img/2.jpg" alt="" />
+      <img src="img/2.jpg" alt="Сдвиг блока другим элементом"/>
       <p>
         Получается, что блок не может сдвигаться благодаря своим отступам, — он
         делает это только за счёт соседних элементов (и сам двигает соседние).
@@ -98,14 +98,14 @@
         Если у блока нет соседа с левой стороны — задавать ему отступ слева
         нельзя. То же самое касается любой из сторон.
       </p>
-      <img src="img/3.jpg" alt="" />
+      <img src="img/3.jpg" alt="Списки с отступами"/>
       <p>
         У обоих задан отступ снизу. Для первого списка это применимо, потому что
         есть сосед снизу — второй список. А для второго, не имеющего такого
         соседа, — отступа нет.
       </p>
       <figure>
-        <img src="img/4.jpg" alt="" />
+        <img src="img/4.jpg" alt="Ошибка вёрстки" />
         <figcaption>
           На скриншоте — выпадение отступов. Отступ есть, но он не увеличивает
           размер «родителя» с голубым фоном, образуя лишний отступ — типичную
@@ -128,13 +128,13 @@
         С помощью <b>:last-child</b> мы обнуляем отступ у последнего <b>ul</b>,
         как показано в примере. Теперь всё работает как надо.
       </p>
-      <img src="img/5.jpg" alt="" />
+      <img src="img/5.jpg" alt="Присвоение отступа спискам кроме последнего" />
       <p>
         Чтобы не создавать два селектора, можно написать короче, используя
         псевдокласс <b>:not</b>. Тут мы буквально говорим следующее: «Задай
         отступ всем ul, но не последнему».
       </p>
-      <img src="img/6.jpg" alt="" />
+      <img src="img/6.jpg" alt="Отступ последнего списка" />
       <h3>Типичный пример: отступы в карточке</h3>
       <p>
         Рассмотрим типичный пример — реализацию карточки с контентом на сайте.
@@ -146,7 +146,7 @@
         самом деле, всё очень просто: нужно применить принципы, о которых я
         рассказал.
       </p>
-      <img src="img/7.jpg" alt="" />
+      <img src="img/7.jpg" alt="Пример карточки" />
       <p>
         Нам достаточно обернуть весь текст карточки в блок и задать блоку
         внутренний отступ — padding. Так наша вёрстка будет соответствовать
@@ -154,7 +154,7 @@
         описанием, достаточно просто сделать отступ снизу — для заголовка.
       </p>
     </div>
-    <h3>Итог</h3>
+    <h2>Итог</h2>
     <p>
       Это основные правила организации отступов, которые помогут вам сделать
       вёрстку качественной и гибкой. Главное — начать им следовать. Со временем
