--- a/article.html
+++ b/article.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Правила организации отступов: как сделать вёрстку гибкой и не допустить
-      ошибок
-    </title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css">
+  <title>
+    Правила организации отступов: как сделать вёрстку гибкой и не допустить
+    ошибок
+  </title>
+</head>
+
+<body>
+  <div class="container">
     <h1>
       Правила организации отступов: как сделать вёрстку гибкой и не допустить
       ошибок
@@ -26,32 +30,28 @@
       отступов. Они позволяют легко менять, улучшать и масштабировать вёрстку и
       уберегут вас от типичных ошибок.
     </p>
-    <h2>Содержание</h2>
-    <p>
-      Первая из частей - HTML. Это начальная стадия соблюдения кодстайла, ведь
-      любой сайт вы начинаете писать именно с этого языка. Давайте посмотрим на
-      основные правила:
-    </p>
-    <ul>
-      <li>
-        <a href="#main-principle">Основные принципы работы с отступами</a>
-      </li>
-      <li>
-        <a href="#first-principle"
-          >Первый принцип: отступы от предыдущего к следующему</a
-        >
-      </li>
-      <li>
-        <a href="#second-principle"
-          >Второй принцип: отступы задаются только между соседями</a
-        >
-      </li>
-      <li>
-        <a href="#third-priciple"
-          >Третий принцип: у последнего элемента группы обнуляем отступ</a
-        >
-      </li>
-    </ul>
+    <div class="content">
+      <h2>Содержание</h2>
+      <p>
+        Первая из частей - HTML. Это начальная стадия соблюдения кодстайла, ведь
+        любой сайт вы начинаете писать именно с этого языка. Давайте посмотрим на
+        основные правила:
+      </p>
+      <ul>
+        <li>
+          <a href="#main-principle">Основные принципы работы с отступами</a>
+        </li>
+        <li>
+          <a href="#first-principle">Первый принцип: отступы от предыдущего к следующему</a>
+        </li>
+        <li>
+          <a href="#second-principle">Второй принцип: отступы задаются только между соседями</a>
+        </li>
+        <li>
+          <a href="#third-priciple">Третий принцип: у последнего элемента группы обнуляем отступ</a>
+        </li>
+      </ul>
+    </div>
     <div>
       <h3 id="main-principle">Основные принципы работы с отступами</h3>
       <p>
@@ -84,7 +84,7 @@
         <b>(margin-top и margin-left)</b> заменяются на аналогичные внутренние
         отступы <b>(padding)</b> у родителя элементов.
       </p>
-      <img src="img/2.jpg" alt="Сдвиг блока другим элементом"/>
+      <img src="img/2.jpg" alt="Сдвиг блока другим элементом" />
       <p>
         Получается, что блок не может сдвигаться благодаря своим отступам, — он
         делает это только за счёт соседних элементов (и сам двигает соседние).
@@ -98,7 +98,7 @@
         Если у блока нет соседа с левой стороны — задавать ему отступ слева
         нельзя. То же самое касается любой из сторон.
       </p>
-      <img src="img/3.jpg" alt="Списки с отступами"/>
+      <img src="img/3.jpg" alt="Списки с отступами" />
       <p>
         У обоих задан отступ снизу. Для первого списка это применимо, потому что
         есть сосед снизу — второй список. А для второго, не имеющего такого
@@ -154,12 +154,16 @@
         описанием, достаточно просто сделать отступ снизу — для заголовка.
       </p>
     </div>
-    <h2>Итог</h2>
-    <p>
-      Это основные правила организации отступов, которые помогут вам сделать
-      вёрстку качественной и гибкой. Главное — начать им следовать. Со временем
-      их соблюдение войдёт в привычку и вы начнёте сразу понимать, где можно
-      допустить ошибку и как её избежать.
-    </p>
-  </body>
+    <div class="content">
+      <h2>Итог</h2>
+      <p>
+        Это основные правила организации отступов, которые помогут вам сделать
+        вёрстку качественной и гибкой. Главное — начать им следовать. Со временем
+        их соблюдение войдёт в привычку и вы начнёте сразу понимать, где можно
+        допустить ошибку и как её избежать.
+      </p>
+    </div>
+  </div>
+</body>
+
 </html>
