--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Главная страница</title>
-  </head>
 
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css">
+  <title>Главная страница</title>
+</head>
+
+<body>
+  <div class="main-content">
     <a href="http://skillbox.ru/ " target="_blank">
-      <img src="img/logo-light.png" alt="Логотип СкиллБокс" />
+      <img class="logo-skillbox" src="img/logo-light.png" alt="Логотип СкиллБокс" />
     </a>
-    <div>
-      <a href="#">Modules</a> <a href="article.html"> Indents </a>
+    <div class="page-links">
+      <a class="page-links__modules" href="#">Modules</a> <a class="page-links__indents" href="article.html">Indents</a>
     </div>
     <div>
       <a href="skillbox.docx" download>Скачать программу</a>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
