add class refactor

--- a/article.html
+++ b/article.html
@@ -14,97 +14,97 @@
 
 <body>
   <div class="container">
-    <h1>
+    <h1 class="title">
       Правила организации отступов: как сделать вёрстку гибкой и не допустить
       ошибок
     </h1>
-    <p>
+    <p class="article-paragraph">
       Вёрстка должна быть <b>максимально гибкой</b>. Даже если заказчик или
       работодатель говорит, что сайт статичный и не будет меняться, всё равно
       стоит делать так, будто завтра добавят несколько блоков текста, несколько
       элементов или что-то ещё.
     </p>
-    <p>
+    <p class="article-paragraph">
       Нужно точно знать, как поведут себя блоки при вёрстке,
       <i>что произойдёт при изменениях</i>. И здесь помогают правила организации
       отступов. Они позволяют легко менять, улучшать и масштабировать вёрстку и
       уберегут вас от типичных ошибок.
     </p>
     <div class="content">
-      <h2>Содержание</h2>
-      <p>
+      <h2 class="subtitlel2">Содержание</h2>
+      <p class="content__paragraph">
         Первая из частей - HTML. Это начальная стадия соблюдения кодстайла, ведь
         любой сайт вы начинаете писать именно с этого языка. Давайте посмотрим на
         основные правила:
       </p>
-      <ul>
-        <li>
+      <ul class="content__list">
+        <li class="content__item">
           <a href="#main-principle">Основные принципы работы с отступами</a>
         </li>
-        <li>
+        <li class="content__item">
           <a href="#first-principle">Первый принцип: отступы от предыдущего к следующему</a>
         </li>
-        <li>
+        <li class="content__item">
           <a href="#second-principle">Второй принцип: отступы задаются только между соседями</a>
         </li>
-        <li>
+        <li class="content__item">
           <a href="#third-priciple">Третий принцип: у последнего элемента группы обнуляем отступ</a>
         </li>
       </ul>
     </div>
     <div>
-      <h3 id="main-principle">Основные принципы работы с отступами</h3>
-      <p>
+      <h3 class="subtitlel2" id="main-principle">Основные принципы работы с отступами</h3>
+      <p class="article-paragraph">
         У любого сайта или документа есть так называемый поток — порядок вывода
         объектов в документе. В вёрстке этот поток идёт сверху вниз, слева
         направо. Именно поэтому, если какой-то элемент на макете находится
         справа, он должен в HTML-коде идти последним из своей группы.
       </p>
-      <p>Исходя из этого, можно сразу сформулировать первый принцип.</p>
+      <p class="article-paragraph">Исходя из этого, можно сразу сформулировать первый принцип.</p>
     </div>
     <div>
-      <h3 id="first-principle">
+      <h3 class="subtitlel2" id="first-principle">
         Отступы задаются от предыдущего элемента к следующему
       </h3>
-      <p>
+      <p class="article-paragraph">
         Это значит, что в вёрстке нужно стараться использовать CSS-свойства
         <b>margin-right</b> и <b>margin-bottom</b>, то есть отступ справа и
         отступ снизу. Проще говоря - избегаем отступов слева и сверху полностью.
       </p>
 
-      <figure>
+      <figure class="card">
         <img src="img/1.jpg" alt="Пример отступов" />
         <figcaption>
           На скриншоте видно, как правильно задавать отступы, — только справа и
           снизу (показано оранжевым)
         </figcaption>
       </figure>
-      <p>
+      <p class="article-paragraph">
         Внешние отступы сверху и слева
         <b>(margin-top и margin-left)</b> заменяются на аналогичные внутренние
         отступы <b>(padding)</b> у родителя элементов.
       </p>
-      <img src="img/2.jpg" alt="Сдвиг блока другим элементом" />
-      <p>
+      <img class="article-image" src="img/2.jpg" alt="Сдвиг блока другим элементом" />
+      <p class="article-paragraph">
         Получается, что блок не может сдвигаться благодаря своим отступам, — он
         делает это только за счёт соседних элементов (и сам двигает соседние).
       </p>
     </div>
     <div>
-      <h3 id="second-principle">
+      <h3 class="subtitlel2" id="second-principle">
         Отступы задаются только между соседними элементами в потоке
       </h3>
-      <p>
+      <p class="article-paragraph">
         Если у блока нет соседа с левой стороны — задавать ему отступ слева
         нельзя. То же самое касается любой из сторон.
       </p>
-      <img src="img/3.jpg" alt="Списки с отступами" />
-      <p>
+      <img class="article-image" src="img/3.jpg" alt="Списки с отступами" />
+      <p class="article-paragraph">
         У обоих задан отступ снизу. Для первого списка это применимо, потому что
         есть сосед снизу — второй список. А для второго, не имеющего такого
         соседа, — отступа нет.
       </p>
-      <figure>
+      <figure class="card">
         <img src="img/4.jpg" alt="Ошибка вёрстки" />
         <figcaption>
           На скриншоте — выпадение отступов. Отступ есть, но он не увеличивает
@@ -113,41 +113,40 @@
         </figcaption>
       </figure>
     </div>
-
     <div>
-      <h3 id="third-priciple">
+      <h3 class="subtitlel2" id="third-priciple">
         Последнему элементу группы нужно обнулять отступ
       </h3>
-      <p>
+      <p class="article-paragraph">
         Это легко сделать с помощью псевдоклассов в CSS. Например, есть
         псевдокласс <b>:last-child</b>, который позволяет выбрать последний
         элемент из группы (например, как в нашем случае: мы найдём последний
         элемент списка).
       </p>
-      <p>
+      <p class="article-paragraph">
         С помощью <b>:last-child</b> мы обнуляем отступ у последнего <b>ul</b>,
         как показано в примере. Теперь всё работает как надо.
       </p>
-      <img src="img/5.jpg" alt="Присвоение отступа спискам кроме последнего" />
-      <p>
+      <img class="article-image" src="img/5.jpg" alt="Присвоение отступа спискам кроме последнего" />
+      <p class="article-paragraph">
         Чтобы не создавать два селектора, можно написать короче, используя
         псевдокласс <b>:not</b>. Тут мы буквально говорим следующее: «Задай
         отступ всем ul, но не последнему».
       </p>
-      <img src="img/6.jpg" alt="Отступ последнего списка" />
-      <h3>Типичный пример: отступы в карточке</h3>
-      <p>
+      <img class="article-image" src="img/6.jpg" alt="Отступ последнего списка" />
+      <h3 class="subtitlel3">Типичный пример: отступы в карточке</h3>
+      <p class="article-paragraph">
         Рассмотрим типичный пример — реализацию карточки с контентом на сайте.
         Как здесь лучше поступить?
       </p>
-      <p>
+      <p class="article-paragraph">
         В нашем примере самая простая карточка: с картинкой, заголовком и
         описанием. Как правильнее сделать отступы у заголовка и описания? На
         самом деле, всё очень просто: нужно применить принципы, о которых я
         рассказал.
       </p>
-      <img src="img/7.jpg" alt="Пример карточки" />
-      <p>
+      <img class="article-image" src="img/7.jpg" alt="Пример карточки" />
+      <p class="article-paragraph">
         Нам достаточно обернуть весь текст карточки в блок и задать блоку
         внутренний отступ — padding. Так наша вёрстка будет соответствовать
         сразу трём принципам. А чтобы сделать отступ между заголовком и
@@ -155,7 +154,7 @@
       </p>
     </div>
     <div class="content">
-      <h2>Итог</h2>
+      <h2 class="subtitlel2">Итог</h2>
       <p>
         Это основные правила организации отступов, которые помогут вам сделать
         вёрстку качественной и гибкой. Главное — начать им следовать. Со временем
