--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
   <div class="main-content">
-    <a href="http://skillbox.ru/ " target="_blank">
-      <img class="logo-skillbox" src="img/logo-light.png" alt="Логотип СкиллБокс" />
+    <a class="logo-skillbox" href="http://skillbox.ru/ " target="_blank">
+      <img src="img/logo-light.png" alt="Логотип СкиллБокс" />
     </a>
-    <div class="page-links">
-      <a class="page-links__modules" href="#">Modules</a> <a class="page-links__indents" href="article.html">Indents</a>
+    <div class="page-list">
+      <a class="page-links" href="#">Modules</a> <a class="page-links" href="article.html">Indents</a>
     </div>
     <div>
       <a href="skillbox.docx" download>Скачать программу</a>
