--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <img src="img/logo-light.png" alt="Логотип СкиллБокс" />
     </a>
     <div class="page-list">
-      <a class="page-links" href="#">Modules</a> <a class="page-links" href="article.html">Indents</a>
+      <a class="page-links" href="#">Modules</a>
+      <a class="page-links" href="article.html">Indents</a>
     </div>
     <div>
       <a href="skillbox.docx" download>Скачать программу</a>
