--- a/article.html
+++ b/article.html
@@ -154,7 +154,7 @@
     </div>
     <div class="content">
       <h2 class="subtitlel2">Итог</h2>
-      <p>
+      <p class="content__paragraph">
         Это основные правила организации отступов, которые помогут вам сделать
         вёрстку качественной и гибкой. Главное — начать им следовать. Со временем
         их соблюдение войдёт в привычку и вы начнёте сразу понимать, где можно
