--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Главная страница</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.css">
-  <title>Главная страница</title>
-</head>
-
-<body>
-  <div class="main-content">
-    <a class="logo-skillbox" href="http://skillbox.ru/ " target="_blank">
-      <img src="img/logo-light.png" alt="Логотип СкиллБокс" />
-    </a>
-    <div class="page-list">
-      <a class="page-links" href="#">Modules</a>
-      <a class="page-links" href="article.html">Indents</a>
+  <body>
+    <div class="main-content">
+      <a class="logo-skillbox" href="http://skillbox.ru/ " target="_blank">
+        <img src="img/logo-light.png" alt="Логотип СкиллБокс" />
+      </a>
+      <div class="page-list">
+        <a class="page-links" href="#">Modules</a>
+        <a class="page-links" href="article.html">Indents</a>
+      </div>
+      <a href="skillbox.docx" download>Скачать программу</a>
     </div>
-    <a href="skillbox.docx" download>Скачать программу</a>
-  </div>
-</body>
-
+  </body>
 </html>
